crates/core/tests/snapshots/un_object_rest_rule__named_owp_helper_for_rejects_inverted_if_guard.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
function m(obj, t) {
    const n = {};
    const i = Object.keys(obj);
    for(let r = 0; r < i.length; r++){
        if (t.indexOf(i[r]) >= 0) {
            n[i[r]] = obj[i[r]];
        }
    }
    return n;
}
const rest = m(obj, [
    "a"
]);
