crates/core/tests/snapshots/un_object_rest_rule__named_owp_helper_for_rejects_unguarded_copy.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
function m(obj, t) {
    const n = {};
    for(let r = 0; r < 1; r++){
        t.indexOf(r);
        n[r] = obj[r];
    }
    return n;
}
const rest = m(obj, [
    "a"
]);
