crates/core/tests/snapshots/un_object_rest_rule__named_owp_helper_inside_function_body.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
export function foo({ name = "default", ...rest } = {}) {
    use(name, rest);
}
