crates/core/tests/snapshots/un_object_rest_rule__named_owp_helper_minified_or_guard_object_keys_form.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
const { a, ...rest } = obj;
