crates/core/tests/snapshots/un_object_rest_rule__named_owp_helper_multiple_call_sites.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
const { x, ...rest1 } = a;
const { y, z, ...rest2 } = b;
