crates/core/tests/snapshots/un_object_rest_rule__named_owp_helper_undefined_default_omitted.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
const { prop, ...rest } = obj;
