crates/core/tests/snapshots/un_object_rest_rule__named_owp_helper_with_preceding_destructuring.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
const { to, exact, strict: _strict, ...rest } = props;
use(to, exact, rest);
