crates/core/tests/snapshots/un_object_rest_rule__no_duplicate_binding_for_excluded_key.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
const replace = external;
const { replace: _replace, ...rest } = props;
use(replace, rest);
