crates/core/tests/snapshots/un_object_rest_rule__no_match_arbitrary_for_in_iife.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
const rest = ((props_1, t)=>{
    const n = {};
    for(const r in props_1){
        sideEffect(r);
    }
    return fallback;
})(props, [
    "a"
]);
use(rest);
