crates/core/tests/snapshots/un_object_rest_rule__with_bare_access.snap
---
source: crates/core/tests/un_object_rest_rule.rs
expression: output
---
const { replace: _replace, to, ...rest } = props;
use(rest);
